# url-shortening-service

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/src/: main.py
backend/src/db/: base.py
backend/src/db/repositories/: short_urls.py
backend/src/endpoints/: short_urls.py
backend/src/schemas/: short_urls.py
backend/src/tests/: conftest.py  test_short_urls.py
backend/src/utils/: url_shortener.py
frontend/src/: Redirect.js
migrations/: env.py
migrations/versions/: 76cdba1df6d4_initial.py
src/: main.py
src/core/: config.py
src/db/: base.py  model.py
src/db/models/: short_urls.py
src/db/repositories/: short_urls.py
src/endpoints/: short_urls.py
src/schemas/: short_urls.py
src/tests/: conftest.py
src/utils/: url_shortener.py
